--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "node-sass": "^4.14.1",
+    "react-router-dom": "^5.2.0",
+    "bootstrap": "^4.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
